--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-*{ margin: 0;padding: 0;}
+*{ margin: 0;padding: 0; font-family: "微软雅黑" verdana;}
 li{ list-style: none;}
 html, body{
     font-size: 100%;
